[metadata]
name = furiosa
version = attr: furiosa.__version__
long_description = file: README.md
license = MIT
license_files = LICENSE

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    furo
    sphinx
    pygments
    webcolors
    importlib-metadata; python_version<"3.8"

[options.package_data]
furiosa =
    theme.conf
    base.html
furiosa.static.fonts =
    *.ttf
    *.txt
    README.md

[options.entry_points]
sphinx.html_themes =
    furiosa = furiosa
pygments.styles =
    nordlight = furiosa.highlight:NordLight
    norddark = furiosa.highlight:NordDark

# vim: set ft=toml:
